--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,12 @@
 
 	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
+	<string name="action_favorite">Add to favorite</string>
 	<string name="action_refresh">Refresh</string>
+	<string name="action_load_more">Load More</string>
+	<string name="action_spinner">Sort by</string>
 	<string name="toast_no_internet">No Internet connection. Please turn on the Internet and reopen the app.</string>
-	<string name="api_key">INSERT MY API KEY HERE</string>
+	<string name="api_key">81cdc16066eb01e599562bc01d19e5a4</string>
 
 	<string-array name="sort_criteria">
 		<item>Most Popular</item>
