--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
 	<string name="app_name">Pop Movies</string>
 
-	<string name="hello_world">Hello world!</string>
-	<string name="action_settings">Settings</string>
 	<string name="action_favorite">Add to favorite</string>
-	<string name="action_refresh">Refresh</string>
 	<string name="action_load_more">Load More</string>
 	<string name="action_spinner">Sort by</string>
 	<string name="toast_no_internet">No Internet connection. Please turn on the Internet and reopen the app.</string>
@@ -15,4 +12,6 @@
 		<item>Highest Rated</item>
 	</string-array>
 	<string name="title_activity_movie_detail">MovieDetail</string>
+	<string name="title_item_list">Items</string>
+	<string name="title_item_detail">Item Detail</string>
 </resources>
