--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,15 @@
 	<string name="action_load_more">Load More</string>
 	<string name="action_spinner">Sort by</string>
 	<string name="toast_no_internet">No Internet connection. Please turn on the Internet and reopen the app.</string>
+	<string name="toast_add_to_favorite">Added to My Favorite Movies.</string>
+	<string name="toast_remove_from_favorite">Removed from My Favorite Movies.</string>
+	<string name="toast_no_favorite">You have not added any favorite movies yet!</string>
 	<string name="api_key">81cdc16066eb01e599562bc01d19e5a4</string>
 
 	<string-array name="sort_criteria">
 		<item>Most Popular</item>
 		<item>Highest Rated</item>
+		<item>My Favorites</item>
 	</string-array>
 	<string name="title_activity_movie_detail">MovieDetail</string>
 	<string name="title_item_list">Items</string>
