FEAT: can display trailers; fix the GridView scroll issue; can display reviews in an ExpandableHeightListView with a nice layout (if no reviews, will indicate that); fix the async task issues with overwriting the previous JsonString.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
 	<string name="toast_remove_from_favorite">Removed from My Favorite Movies.</string>
 	<string name="toast_no_favorite">You have not added any favorite movies yet!</string>
 	<string name="api_key">81cdc16066eb01e599562bc01d19e5a4</string>
+	<string name="json_string_no_review">"results":[]</string>
+	<string name="no_review">Reviews: currently no reviews for this movie.</string>
 
 	<string-array name="sort_criteria">
 		<item>Most Popular</item>
