--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,11 @@
 	</string-array>
 	<string name="title_activity_movie_detail">MovieDetail</string>
 	<string name="title_activity_search">Search</string>
+	<string name="title_activity_about">About</string>
+
+	<string name="hello_world">Popular Movies</string>
+	<string name="version">v1.1</string>
+	<string name="disclaimer">This app uses the TMDb API but is not endorsed or certified by TMDb.</string>
+	<string name="credits">Copyright 2015 Linyin Wang \n All Rights Reserved.</string>
+	<string name="action_settings">Settings</string>
 </resources>
